// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/pull-to-refresh/demo/basic.md correctly 1`] = `
<div>
  <a
    aria-disabled="false"
    class="am-button"
    role="button"
    style="margin-bottom:15px"
  >
    <span>
      direction: 
    </span>
    <span>
      down
    </span>
  </a>
  <div
    class="am-pull-to-refresh am-pull-to-refresh-down"
    style="height:0;overflow:auto"
  >
    <div
      class="am-pull-to-refresh-content-wrapper"
    >
      <div
        class="am-pull-to-refresh-content am-pull-to-refresh-transition"
      >
        <div
          class="am-pull-to-refresh-indicator"
        >
          下拉可以刷新
        </div>
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/pull-to-refresh/demo/basic-listview.md correctly 1`] = `
<div>
  <a
    aria-disabled="false"
    class="am-button am-button-inline"
    role="button"
    style="margin:30px 15px"
  >
    <span>
      partial scroll
    </span>
  </a>
  <div
    class="am-list-view-scrollview"
    style="position:relative;overflow:auto;-webkit-overflow-scrolling:touch;height:0;border:1px solid #ddd;margin:5px 0"
  >
    <div
      class="am-list-view-scrollview-content am-list"
      style="position:absolute;min-width:100%"
    >
      <div
        class="am-pull-to-refresh am-pull-to-refresh-down"
      >
        <div
          class="am-pull-to-refresh-content-wrapper"
        >
          <div
            class="am-pull-to-refresh-content am-pull-to-refresh-transition"
          >
            <div
              class="am-pull-to-refresh-indicator"
            >
              下拉可以刷新
            </div>
            <div>
              <div
                class="am-list-header"
              >
                <span>
                  Pull to refresh
                </span>
              </div>
              <div
                class="am-list-body"
              />
              <div
                class="am-list-footer"
              >
                <div
                  style="padding:30px;text-align:center"
                >
                  Loading...
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
